fix: scroll to top on category change, fix navbar z-index, center align About section

--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -8,6 +8,10 @@
     margin: 0 auto;
 }
 
+.about-text {
+    text-align: center;
+}
+
 .about-text p {
     font-size: 1.125rem;
     line-height: 1.8;
